--- a/About.html
+++ b/About.html
@@ -57,13 +57,13 @@
 <a href="index.html">home</a>
 </div>
   <div class="mmm">
-  <img src="Food-Recipe.jpg/1.jpg">
-  <img src="Food-Recipe.jpg/2.jpg">
-  <img src="Food-Recipe.jpg/3.jpg">
-  <img src="Food-Recipe.jpg/4.jpg">
-  <img src="Food-Recipe.jpg/5.jpg">
-  <img src="Food-Recipe.jpg/6.jpg">
-  <img src="Food-Recipe.jpg/7.jpg">
-  <img src="Food-Recipe.jpg/8.jpg">
+  <img src="1.jpg">
+  <img src="2.jpg">
+  <img src="3.jpg">
+  <img src="4.jpg">
+  <img src="5.jpg">
+  <img src="6.jpg">
+  <img src="7.jpg">
+  <img src="8.jpg">
   </div>
   </html>
